# code

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: main.cpp  template.cpp  template.hpp
src/general/array/: max_subarray.cpp  max_subarray.hpp  max_subarray_test.cpp
src/general/sort/: insert.cpp  insert.hpp  merge.cpp  merge.hpp
src/leetcode/: task1.cpp  task1.hpp
tests/general/sort/: merge.cpp
